--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ select {
 }
 .container {
   max-width: 600px;
-  margin: 60px 0;
+  margin: 60px auto;
   background-color: white;
   padding: 30px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
